--- a/problem_set_template.tex.jinja
+++ b/problem_set_template.tex.jinja
@@ -6,7 +6,7 @@
 
 \documentclass[12pt]{article}
 
-%These two lines will give the problem set number and you rname
+%These two lines will give the problem set number and your name
 \newcommand{\name}{Joshua Blum}
 \newcommand{\problemset}{Problem Set {{ psetnumber }}}
 
@@ -15,6 +15,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{listings}
 \usepackage{latexsym}
 \usepackage{enumerate}
 \setlength{\parskip}{1pc}
@@ -29,12 +30,12 @@
 \newpage
 \noindent
 \framebox{
-        \vbox{
-                6.046 Homework \hfill {\bf \problemset}
-                \hfill #1 \\ 
-                \name \hfill \today \\
+    \vbox{
+        6.046 Homework \hfill {\bf \problemset}
+        \hfill #1 \\ 
+        \name \hfill \today \\
                 Collaborators: #2
-        }
+    }
 }
 \bigskip
 
