updated template and fixed index bug

--- a/problem_set_template.tex.jinja
+++ b/problem_set_template.tex.jinja
@@ -30,12 +30,12 @@
 \newpage
 \noindent
 \framebox{
-    \vbox{
-        6.046 Homework \hfill {\bf \problemset}
-        \hfill #1 \\ 
-        \name \hfill \today \\
+	\vbox{
+		6.046 Homework \hfill {\bf \problemset}
+		\hfill #1 \\ 
+		\name \hfill \today \\
                 Collaborators: #2
-    }
+	}
 }
 \bigskip
 
@@ -46,7 +46,7 @@
 
 %The \answer tag begins a new page for your answer. The first argument is the problem number, and the second argument is your collaborators.
 {% for problem_number  in problems %}
-
+%%%%%%%%%%%%%NEW PROBLEM%%%%%%%%%%%%%%%%%
 \answer{Problem {{ problem_number }}}{Collaborators}
 Answer to problem {{ problem_number}}
 
